Currently works with issues
To fix:
- Still can't get hover working on clients properly.
- Side menu scrollbar sizing on firefox.
- Something in my side menu and cookie dialog does something odd that stops the sticky header from working. I don't know how to solve it.
- Why does my dialogue not select the whole page with 100vw/vh?

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1232,6 +1232,7 @@ body {
 
 #container-dropdown .dropdown-items {
   margin: 0 auto;
+  height: 119.5px;
 }
 
 #container-dropdown .dropdown-items .hidden {
@@ -3888,6 +3889,113 @@ main.menu-closed {
   .sub-footer-top .sub-footer-wrapper .footer-sub .hide-hyphen {
     display: block;
   }
+}
+
+#cookie-dialogue {
+  width: 100vw;
+  height: 100vh;
+  background-color: transparent;
+}
+
+#cookie-dialogue #cookie-grid-container {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-rows: 1fr auto 1fr;
+  padding: 30px;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  padding-left: 60px;
+}
+
+#cookie-dialogue #cookie-grid-container #cookie-dialogue-wrapper {
+  grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  background-color: white;
+  border-radius: 0.25rem;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  grid-template-columns: 1fr;
+}
+
+@media (min-width: 768px) {
+  #cookie-dialogue #cookie-grid-container #cookie-dialogue-wrapper {
+    max-width: 600px;
+    min-height: 372.14px;
+  }
+  #cookie-dialogue #cookie-grid-container #cookie-dialogue-wrapper #cookie-dialogue-button-wrapper {
+    display: grid;
+    grid-template-rows: 1fr auto 1fr;
+    grid-template-columns: 1fr auto 1fr;
+    max-height: 87px;
+  }
+  #cookie-dialogue #cookie-grid-container #cookie-dialogue-wrapper #cookie-dialogue-button-wrapper #cookie-dialogue-change-button {
+    margin-bottom: 0 !important;
+    margin-right: 15px;
+    max-width: 264px;
+    align-self: center;
+  }
+  #cookie-dialogue #cookie-grid-container #cookie-dialogue-wrapper #cookie-dialogue-button-wrapper #cookie-dialogue-accept-button {
+    margin-bottom: 0;
+    margin-left: 15px;
+    max-width: 264px;
+    align-self: center;
+  }
+  #cookie-dialogue #cookie-grid-container #cookie-dialogue-wrapper #cookie-dialogue-button-wrapper #cookie-dialogue-accept-button, #cookie-dialogue #cookie-grid-container #cookie-dialogue-wrapper #cookie-dialogue-button-wrapper #cookie-dialogue-change-button {
+    width: 50%;
+  }
+}
+
+#cookie-dialogue #cookie-grid-container #cookie-dialogue-wrapper #cookie-dialogue-title {
+  line-height: 1.42857143;
+  padding: 15px 20px;
+  font-size: 1.75rem;
+  text-align: left;
+  border-bottom: 0.5px solid #00000022;
+  color: #414351;
+}
+
+#cookie-dialogue #cookie-grid-container #cookie-dialogue-wrapper #cookie-dialogue-body {
+  line-height: 2;
+  padding: 20px;
+  font-size: 1rem;
+  color: #666666;
+  height: fit-content;
+}
+
+#cookie-dialogue #cookie-grid-container #cookie-dialogue-wrapper #cookie-dialogue-button-wrapper {
+  align-self: self-end;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 19px 20px 20px 20px;
+  border-top: 0.5px solid #00000022;
+}
+
+#cookie-dialogue #cookie-grid-container #cookie-dialogue-wrapper #cookie-dialogue-button-wrapper button {
+  padding: 5px 30px;
+  text-align: center;
+  height: 60%;
+  width: 100%;
+  font-size: 1.063rem;
+  min-height: 47px;
+  color: white;
+  border-radius: 0.1875rem;
+}
+
+#cookie-dialogue #cookie-grid-container #cookie-dialogue-wrapper #cookie-dialogue-button-wrapper #cookie-dialogue-accept-button {
+  background-color: #926fb1;
+  cursor: pointer;
+  outline: none;
+}
+
+#cookie-dialogue #cookie-grid-container #cookie-dialogue-wrapper #cookie-dialogue-button-wrapper #cookie-dialogue-change-button {
+  margin-bottom: 20px;
+  background-color: #999aa2;
+  cursor: pointer;
+  outline: none;
 }
 
 .button-large-dkblueBG {
