--- a/SCSS/Layout/_dropdown.scss
+++ b/SCSS/Layout/_dropdown.scss
@@ -28,6 +28,7 @@
 
     .dropdown-items {
         margin: 0 auto;
+        height: 119.5px;
 
         .hidden {
             display: none;
